syntax = "proto3";

package devicecontrol;

service DawnDeviceControl {
  rpc SetPowerChange(SetDeviceRequest) returns (SetPowerReply);
  rpc GetDevicePower(SetDeviceRequest) returns (GetStatusReply);
  rpc SetAllPowerOn(SetAllDeviceRequest) returns (SetAllDeviceReply);
  rpc SetAllPowerOff(SetAllDeviceRequest) returns (SetAllDeviceReply);
}

message SetDeviceRequest {
  string ip = 1;         
}
message SetPowerReply {
  bool success = 1;
  string message = 2;
  bool is_on = 3;
}
message GetStatusReply {
  bool is_connect = 1;
  bool is_on = 2;
}


message SetAllDeviceRequest{
  string json = 1;
}
message SetAllDeviceReply{
  bool success = 1;
}